<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical">
	
	    <TextView
	        android:textSize="20sp"
	        android:layout_gravity="center_horizontal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:text="@string/notice" />
	    
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/button_yes"
	        android:text="@string/yes"/>
	    
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/button_no"
	        android:text="@string/no"/>
	    
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/button_lunching"
	        android:text="@string/lunching"/>
	    
	    <Button 
	        android:layout_marginTop="50dp"
	        android:layout_marginBottom="50dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/button_list"
	        android:text="@string/show_history"/>
	    
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/button_clear"
	        android:text="@string/clear_history"/>
	
	</LinearLayout>
</ScrollView>